/*
 * $Id: ChangeLog,v 1.5408 2007/03/29 00:03:48 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-29 10:53 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * source/rdd/bmdbfcdx/bmdbfcdx.c
    + added support for DBORDERINFO( DBOI_ISMULTITAG )

2007-03-28 21:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/minmax.c
    ! fixed lines 70 and 146. Changed "p1->item.asDate.value" to
      "p2->item.asDate.value" as reported by Serge Jakimoff from
       comp.lang.xharbour news.

2007-03-28 16:00 UTC+0200 Alex Strickland <sscc/at/mweb.co.za>
  * source/rtl/seconds.c
    * Use GetLocalTime() when HB_OS_WIN_32 defined.

2007-03-27 22:42 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib/rdd_ads/ads1.c
    * Change direct access of hb_set to use hb_GetSetStructPtr()
    * Corrected few HB_TR_ALWAYS to HB_TR_DEBUG

 /* Commited on behalf of Brian Hays */

2007-03-27 10:22 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbset.h
  * source/rtl/set.c
    + Added missing HB_EXPORTs

  * source/compiler/harbour.slx
  * source/macro/macro.slx
    * Simplified processing of new AM and PM tokens.

  * tests/dates5.prg
    * Minor formating

2007-03-27 03:29 UTC-0300 Walter Negro <anegro/at/overnet.com.ar>
   * source/common/hbdate.c
    ! Correct some Warnings
  * source/compiler/harbour.slx
     ! Correct compilation of AM and PM as Identifier

2007-03-26 18:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/ct/ctnet.c
    * fixed NetPrinter() to treat "PRN" as "LPT1".

2007-03-26 11:24 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/common/hbdate.c
  * source/vm/hvm.c
    * Type cast for div() arguments needed by MSVC

2007-03-25 21:20 UTC-0300 Walter Negro <anegro/at/overnet.com.ar>
  * source/common/hbdate.c
  * source/vm/hvm.c